--- a/src/css/app.css
+++ b/src/css/app.css
@@ -207,12 +207,9 @@ body {
 }
 
 .fade-out {
+   visibility: hidden;
   opacity: 0;
-  animation: fadeOut ease .5s;
-  -webkit-animation: fadeOut ease .5s;
-  -moz-animation: fadeOut ease .5s;
-  -o-animation: fadeOut ease .5s;
-  -ms-animation: fadeOut ease .5s;
+  transition: visibility 0s .5s, opacity .5s linear;
 }
 
 @keyframes fadeOut{
